Fixed background displaying wrongly on mobile devices and improved info popup boxes

--- a/style.css
+++ b/style.css
@@ -161,26 +161,97 @@ button:focus {
 Popup window
 -------
 */
-.infob {
-    display: none;
+.infobox {
     position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    z-index: 20;
+    max-width: 85%;
+    width: 500px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    opacity: 1;
+    transition: margin-top 150ms ease-out, opacity 150ms ease-out;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.6);
 }
 
-/* Content/Box */
-.infob-content {
+@media screen and (max-height: 500px) {
+    .infobox {
+        width: 80%;
+    }
+}
+
+.infobox_toggler {
+    display: none;
+}
+
+.infobox_toggler:not(:checked) ~ .infobox {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    opacity: 0;
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    margin-top: -10px;
+}
+
+.infobox_toggler:not(:checked) ~ .infobox_mask {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    opacity: 0;
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+}
+
+.infobox_mask {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    transition: opacity 150ms ease-out;
+    background: RGBA(0, 0, 0, 0.7);
+    cursor: pointer;
+}
+
+.infobox_close::after {
+    content: "✕";
+    position: absolute;
+    display: inline-block;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.infobox_title {
+    margin: 0;
+    color: var(--main-color);
+}
+
+.infobox_content {
     background-color: var(--bg-color);
-    margin: 15% auto;
-    padding: 20px;
     border: 1px solid var(--main-color);
-    width: 80%;
+    padding: 30px;
+    max-height: 90vh;
+    overflow-x: auto;
+    border-color: var(--main-color);
+    box-shadow: 0 0 10px var(--main-color);
+}
+
+.infobox_content p:nth-of-type(-n+1) {
+    font-size: 15px;
+    color: var(--disabled-main);
 }
 
 
